--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
       </div>
       <div id="result"></div>
   </div>
-
+  <div id="points">
+    <div>
+          <h4>User Points</h4>
+          <p id="userPoint"></p>
+        </div>
+        <div>
+          <h4>Computer Point</h4>
+          <p id="computerPoint"></p>
+      </div>
+  </div>
   <!-- Link JQuery here -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <!-- Link script.js here -->
